--- a/res/layout/activity_pogoda_godz.xml
+++ b/res/layout/activity_pogoda_godz.xml
@@ -8,12 +8,10 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".PogodaGodz" >
 
-    <ListView
-        android:id="@+id/listView1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true" >
-    </ListView>
+  <ListView
+         android:id="@android:id/list"
+         android:layout_width="fill_parent"
+         android:layout_height="fill_parent"
+         android:layout_below="@+id/textView1" />
 
 </RelativeLayout>
