--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -36,7 +36,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/miasto"
-        android:layout_alignRight="@+id/podajMiasto"
+        android:layout_alignRight="@+id/miasto"
         android:layout_marginTop="115dp"
         android:onClick="doPogody"
         android:text="Dalej" />
@@ -46,19 +46,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/btnMiasto"
+        android:layout_alignRight="@+id/btnMiasto"
         android:layout_below="@+id/btnMiasto"
-        android:layout_marginTop="38dp"
+        android:layout_marginTop="24dp"
         android:onClick="GPS"
         android:text="Znajdź mnie przez GPS" />
-
-    <Button
-        android:id="@+id/test"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/GPS"
-        android:layout_alignRight="@+id/GPS"
-        android:layout_below="@+id/GPS"
-        android:onClick="test"
-        android:text="Test aktywnosci" />
 
 </RelativeLayout>
