--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -34,7 +34,7 @@
         android:id="@+id/btnMiasto"
         style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_alignLeft="@+id/miasto"
         android:layout_alignRight="@+id/miasto"
         android:layout_marginTop="115dp"
@@ -44,11 +44,11 @@
     <Button
         android:id="@+id/GPS"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_alignLeft="@+id/btnMiasto"
         android:layout_alignRight="@+id/btnMiasto"
         android:layout_below="@+id/btnMiasto"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="14dp"
         android:onClick="GPS"
         android:text="Znajdź mnie przez GPS" />
 
