--- a/res/layout/listitem.xml
+++ b/res/layout/listitem.xml
@@ -8,8 +8,11 @@
     <ImageView
         android:id="@+id/icon"
         android:layout_gravity="left"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        
+        android:layout_width="100dp"
+    	android:layout_height="100dp"
+    	android:src="@drawable/ic_launcher" 
+    	android:scaleType="fitXY"/>
  
     <TextView
         android:id="@+id/text"
